home-k8s-cluster/workloads/k8s-prod/manifests/argocd-ingress/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: argocd-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # raefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - argocd.home.maxanderson.tech
      secretName: argocd-tls
  rules:
    - host: argocd.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
